--- a/css/style.css
+++ b/css/style.css
@@ -1,115 +1,54 @@
-/* Incluya el relleno y el borde en el ancho y alto total de un elemento */
-* {
-  box-sizing: border-box;
-}
-
-/* Eliminar márgenes y relleno de la lista */
-ul {
-  margin: 0;
-  padding: 0;
-}
-
-/* Estilo de los elementos de la lista */
-ul li {
-  cursor: pointer;
-  position: relative;
-  padding: 12px 8px 12px 40px;
-  background: #eee;
-  font-size: 18px;
-  transition: 0.2s;
-
-  /* hacer que los elementos de la lista no se puedan seleccionar */
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-
-/* Establezca todos los elementos impares de la lista en un color diferente (rayas de cebra) */
-ul li:nth-child(odd) {
-  background: #f9f9f9;
-}
-
-/* Color de fondo más oscuro al pasar el mouse */
-ul li:hover {
-  background: #ddd;
-}
-
-/* Al hacer clic, agregue un color de fondo y tache el texto */
-ul li.checked {
-  background: #888;
-  color: #fff;
-  text-decoration: line-through;
-}
-
-/* Agregue una marca de "marcado" cuando se haga click sobre el elemento de la lista */
-ul li.checked::before {
-  content: "";
-  position: absolute;
-  border-color: #fff;
-  border-style: solid;
-  border-width: 0 2px 2px 0;
-  top: 10px;
-  left: 16px;
-  transform: rotate(45deg);
-  height: 15px;
-  width: 7px;
-}
-
-/* Estilo del boton cerrar */
-.close {
-  position: absolute;
-  right: 0;
-  top: 0;
-  padding: 12px 16px 12px 16px;
-}
-
-.close:hover {
-  background-color: #f44336;
-  color: white;
-}
-
-/* Estilo del header */
-.header {
-  background-color: #00abe7;
-  padding: 30px 40px;
-  color: white;
-  text-align: center;
-}
-
-/* Limpiar datos despues del encabezado */
-.header:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* Estilo input */
-input {
-  margin: 0;
-  border: none;
-  border-radius: 0;
-  width: 75%;
-  padding: 10px;
-  float: left;
-  font-size: 16px;
-}
-
-/* Estilo boton */
-.addBtn {
-  padding: 10px;
-  width: 25%;
-  background: #d9d9d9;
-  color: #555;
-  float: left;
-  text-align: center;
-  font-size: 16px;
-  cursor: pointer;
-  transition: 0.3s;
-  border-radius: 0;
-  border: none;
-}
-
-.addBtn:hover {
-  background-color: #bbb;
-}
+select {
+    padding: 5px 35px 5px 5px;
+    font-size: 16px;
+    border: 1px solid #CCC;
+    height: 34px;
+  }
+  
+  .card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    border-radius: 5px; 
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 20px;
+  }
+  
+  .card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  }
+  
+  .container {
+    padding: 2px 16px;
+    text-align: center;
+  }
+  
+  img {
+    border-radius: 5px 5px 0 0;
+    width: 100%;
+  }
+  
+  .item {
+    width: 20%;
+  }
+  
+  /* Estilo boton */
+  .btn {
+    height: 34px;
+    padding: 0 20px;
+    background: #00abe7;
+    color: #fff;
+    text-align: center;
+    font-size: 16px;
+    cursor: pointer;
+    transition: 0.3s;
+    border-radius: 0;
+    border: none;
+  }
+  
+  .btn:hover {
+    background-color: #008ec0;
+  }
